revert unnecessary change at lda tutorial

--- a/tutorial/source/prodlda.ipynb
+++ b/tutorial/source/prodlda.ipynb
@@ -92,7 +92,7 @@
     "def model(counts):\n",
     "    theta = pyro.sample('theta', dist.Dirichlet(torch.ones(6)))\n",
     "    total_count = int(counts.sum())\n",
-    "    pyro.sample('counts', dist.Multinomial(total_count, theta), obs=counts.float())\n",
+    "    pyro.sample('counts', dist.Multinomial(total_count, theta), obs=counts)\n",
     "\n",
     "data = torch.tensor([5, 4, 2, 5, 6, 5, 3, 3, 1, 5, 5, 3, 5, 3, 5, \\\n",
     "                     3, 5, 5, 3, 5, 5, 3, 1, 5, 3, 3, 6, 5, 5, 6])\n",
