change log-normal to logistic-normal

--- a/tutorial/source/prodlda.ipynb
+++ b/tutorial/source/prodlda.ipynb
@@ -426,7 +426,7 @@
     "    def model(self, docs):\n",
     "        pyro.module(\"decoder\", self.decoder)\n",
     "        with pyro.plate(\"documents\", docs.shape[0]):\n",
-    "            # Dirichlet prior  𝑝(𝜃|𝛼) is replaced by a log-normal distribution\n",
+    "            # Dirichlet prior 𝑝(𝜃|𝛼) is replaced by a logistic-normal distribution\n",
     "            logtheta_loc = docs.new_zeros((docs.shape[0], self.num_topics))\n",
     "            logtheta_scale = docs.new_ones((docs.shape[0], self.num_topics))\n",
     "            logtheta = pyro.sample(\n",
@@ -451,7 +451,7 @@
     "    def guide(self, docs):\n",
     "        pyro.module(\"encoder\", self.encoder)\n",
     "        with pyro.plate(\"documents\", docs.shape[0]):\n",
-    "            # Dirichlet prior  𝑝(𝜃|𝛼) is replaced by a logistic-normal distribution,\n",
+    "            # Dirichlet prior 𝑝(𝜃|𝛼) is replaced by a logistic-normal distribution,\n",
     "            # where μ and Σ are the encoder network outputs\n",
     "            logtheta_loc, logtheta_scale = self.encoder(docs)\n",
     "            logtheta = pyro.sample(\n",
