Use single fully-qualified param names in callable optim configs

--- a/tutorial/source/svi_part_i.ipynb
+++ b/tutorial/source/svi_part_i.ipynb
@@ -146,7 +146,7 @@
     "```python\n",
     "from pyro.optim import Adam\n",
     "\n",
-    "def per_param_callable(module_name, param_name):\n",
+    "def per_param_callable(param_name):\n",
     "    if param_name == 'my_special_parameter':\n",
     "        return {\"lr\": 0.010}\n",
     "    else:\n",
