--- a/tutorial/source/svi_part_iii.ipynb
+++ b/tutorial/source/svi_part_iii.ipynb
@@ -235,8 +235,8 @@
     "Note that in practice it can be important to use a different set of learning hyperparameters (e.g. a higher learning rate) for baseline parameters. In Pyro this can be done as follows:\n",
     "\n",
     "```python\n",
-    "def per_param_args(module_name, param_name):\n",
-    "    if 'baseline' in param_name or 'baseline' in module_name:\n",
+    "def per_param_args(param_name):\n",
+    "    if 'baseline' in param_name:\n",
     "        return {\"lr\": 0.010}\n",
     "    else:\n",
     "        return {\"lr\": 0.001}\n",
