--- a/tutorial/source/intro_part_ii.ipynb
+++ b/tutorial/source/intro_part_ii.ipynb
@@ -15,6 +15,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import torch\n",
     "\n",
     "import pyro\n",
@@ -155,7 +156,7 @@
    "source": [
     "def perfect_guide(guess):\n",
     "    loc = (0.75**2 * guess + 9.5) / (1 + 0.75**2)  # 9.14\n",
-    "    scale = torch.sqrt(0.75**2 / (1 + 0.75**2))  # 0.6\n",
+    "    scale = np.sqrt(0.75**2 / (1 + 0.75**2))  # 0.6\n",
     "    return pyro.sample(\"weight\", dist.Normal(loc, scale))"
    ]
   },
