Correcting for PR comments https://github.com/pyro-ppl/pyro/pull/2840#issuecomment-841231047

--- a/tutorial/source/ss-vae.ipynb
+++ b/tutorial/source/ss-vae.ipynb
@@ -280,14 +280,13 @@
     "\n",
     "For the two variants we've explored so far, the classifier $q_{\\phi}({\\bf y}~|~ {\\bf x})$ doesn't learn directly from labeled data. As we discussed in the introduction, this seems like a potential problem. One approach to addressing this problem is to add an extra term to the objective so that the classifier learns directly from labeled data. Note that this is exactly the approach adopted in reference [1] (see their Eqn. 9). The modified objective function is given by:\n",
     "\n",
-    "$$\n",
     "\\begin{align}\n",
-    "    \\mathcal{J}^{\\alpha} &= \\mathcal{J} + \\alpha \\mathop{\\mathbb{E}}_{\\tilde{p_l}({\\bf x,y})} \\big[-\\log\\big(q_{\\phi}({\\bf y}~|~ {\\bf x})\\big)\\big] \\\\\n",
-    "    &= \\mathcal{J} + \\alpha' \\sum_{({\\bf x,y}) \\in \\mathcal{D}_{supervised}}  \\big[-\\log\\big(q_{\\phi}({\\bf y}~|~ {\\bf x})\\big)\\big]\n",
+    "\\mathcal{J}^{\\alpha} &= \\mathcal{J} + \\alpha \\mathop{\\mathbb{E}}_{\\tilde{p_l}({\\bf x,y})} \\big[-\\log\\big(q_{\\phi}({\\bf y}~|~ {\\bf x})\\big)\\big] \\\\\n",
+    "&= \\mathcal{J} + \\alpha' \\sum_{({\\bf x,y}) \\in \\mathcal{D}_{\\text{supervised}}}  \\big[-\\log\\big(q_{\\phi}({\\bf y}~|~ {\\bf x})\\big)\\big]\n",
     "\\end{align}\n",
-    "$$\n",
     "\n",
-    "where $\\tilde{p_l}({\\bf x,y})$ is the empirical distribution over the labeled (or supervised) data and $\\alpha' \\equiv \\frac{\\alpha}{|\\mathcal{D}_{supervised}|}$. Note that we've introduced an arbitrary hyperparameter $\\alpha$ that modulates the importance of the new term.\n",
+    "\n",
+    "where $\\tilde{p_l}({\\bf x,y})$ is the empirical distribution over the labeled (or supervised) data and $\\alpha' \\equiv \\frac{\\alpha}{|\\mathcal{D}_{\\text{supervised}}|}$. Note that we've introduced an arbitrary hyperparameter $\\alpha$ that modulates the importance of the new term.\n",
     "\n",
     "To learn using this modified objective in Pyro we do the following: \n",
     "\n",
