Update enumeration tutorial

--- a/tutorial/source/tensor_shapes.ipynb
+++ b/tutorial/source/tensor_shapes.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Tensor shapes in Pyro\n",
     "\n",
-    "This tutorial introduces Pyro's organization of tensor dimensions. Before starting, you should familiarize yourself with [PyTorch broadcasting semantics](http://pytorch.org/docs/master/notes/broadcasting.html).\n",
+    "This tutorial introduces Pyro's organization of tensor dimensions. Before starting, you should familiarize yourself with [PyTorch broadcasting semantics](http://pytorch.org/docs/master/notes/broadcasting.html).  After this tutorial, you may want to also read about [enumeration](http://pyro.ai/examples/tensor_shapes.html).\n",
     "\n",
     "#### Summary:\n",
     "- Tensors broadcast by aligning on the right: `torch.ones(3,4,5) + torch.ones(5)`.\n",
@@ -20,6 +20,9 @@
     "  - use negative indices like `x.sum(-1)` rather than `x.sum(2)`\n",
     "  - use ellipsis notation like `pixel = image[..., i, j]`\n",
     "  - use [Vindex](http://docs.pyro.ai/en/dev/ops.html#pyro.ops.indexing.Vindex) if `i,j` are enumerated, `pixel = Vindex(image)[..., i, j]`\n",
+    "- When using `pyro.plate`'s automatic subsampling, be sure to subsample your data:\n",
+    "  - Either manually subample by capturing the index `with pyro.plate(...) as i: ...`\n",
+    "  - or automatically subsample via `batch = pyro.subsample(data, event_dim=...)`.\n",
     "- When debugging, examine all shapes in a trace using [Trace.format_shapes()](http://docs.pyro.ai/en/dev/poutine.html#pyro.poutine.Trace.format_shapes).\n",
     "  \n",
     "#### Table of Contents\n",
@@ -759,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
