--- a/tutorial/source/tensor_shapes.ipynb
+++ b/tutorial/source/tensor_shapes.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Tensor shapes in Pyro\n",
     "\n",
-    "This tutorial introduces Pyro's organization of tensor dimensions. Before starting, you should familiarize yourself with [PyTorch broadcasting semantics](http://pytorch.org/docs/master/notes/broadcasting.html).  After this tutorial, you may want to also read about [enumeration](http://pyro.ai/examples/tensor_shapes.html).\n",
+    "This tutorial introduces Pyro's organization of tensor dimensions. Before starting, you should familiarize yourself with [PyTorch broadcasting semantics](http://pytorch.org/docs/master/notes/broadcasting.html).  After this tutorial, you may want to also read about [enumeration](http://pyro.ai/examples/enumeration.html).\n",
     "\n",
     "#### Summary:\n",
     "- Tensors broadcast by aligning on the right: `torch.ones(3,4,5) + torch.ones(5)`.\n",
