--- a/tutorial/source/air.ipynb
+++ b/tutorial/source/air.ipynb
@@ -41,7 +41,7 @@
     "import numpy as np\n",
     "\n",
     "smoke_test = ('CI' in os.environ)\n",
-    "assert pyro.__version__.startswith('1.6.0')"
+    "assert pyro.__version__.startswith("1.7.0")"
    ]
   },
   {
