--- a/tutorial/source/prodlda.ipynb
+++ b/tutorial/source/prodlda.ipynb
@@ -70,7 +70,7 @@
     "from pyro.infer import MCMC, NUTS\n",
     "import torch\n",
     "\n",
-    "assert pyro.__version__.startswith('1.6.0')\n",
+    "assert pyro.__version__.startswith("1.7.0")\n",
     "# Enable smoke test - run the notebook cells on CI.\n",
     "smoke_test = 'CI' in os.environ"
    ]
