--- a/tutorial/source/svi_part_iii.ipynb
+++ b/tutorial/source/svi_part_iii.ipynb
@@ -283,7 +283,7 @@
     "from pyro.infer import SVI, TraceGraph_ELBO\n",
     "import sys\n",
     "\n",
-    "assert pyro.__version__.startswith('1.6.0')\n",
+    "assert pyro.__version__.startswith("1.7.0")\n",
     "\n",
     "# this is for running the notebook in our testing framework\n",
     "smoke_test = ('CI' in os.environ)\n",
