--- a/tutorial/source/tensor_shapes.ipynb
+++ b/tutorial/source/tensor_shapes.ipynb
@@ -54,7 +54,7 @@
     "from pyro.optim import Adam\n",
     "\n",
     "smoke_test = ('CI' in os.environ)\n",
-    "assert pyro.__version__.startswith('1.6.0')\n",
+    "assert pyro.__version__.startswith("1.7.0")\n",
     "\n",
     "# We'll ue this helper to check our models are correct.\n",
     "def test_model(model, guide, loss):\n",
