--- a/tutorial/source/tracking_1d.ipynb
+++ b/tutorial/source/tracking_1d.ipynb
@@ -30,7 +30,7 @@
     "from pyro.optim import Adam\n",
     "\n",
     "%matplotlib inline\n",
-    "assert pyro.__version__.startswith('1.6.0')\n",
+    "assert pyro.__version__.startswith("1.7.0")\n",
     "smoke_test = ('CI' in os.environ)"
    ]
   },
