--- a/tutorial/source/vae.ipynb
+++ b/tutorial/source/vae.ipynb
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert pyro.__version__.startswith('1.6.0')\n",
+    "assert pyro.__version__.startswith("1.7.0")\n",
     "pyro.distributions.enable_validation(False)\n",
     "pyro.set_rng_seed(0)\n",
     "# Enable smoke test - run the notebook cells on CI.\n",
