Update tutorial versions

--- a/tutorial/source/jit.ipynb
+++ b/tutorial/source/jit.ipynb
@@ -48,7 +48,7 @@
     "from pyro.optim import Adam\n",
     "\n",
     "smoke_test = ('CI' in os.environ)\n",
-    "assert pyro.__version__.startswith("1.7.0")"
+    "assert pyro.__version__.startswith('1.6.0')"
    ]
   },
   {
