✏️ Fix typos and add notebook as .py

--- a/examples/rsa/generics-vectorized.ipynb
+++ b/examples/rsa/generics-vectorized.ipynb
@@ -2,26 +2,17 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 287,
+            "execution_count": 1,
             "source": [
                 "%load_ext autoreload\n",
                 "%autoreload 2"
             ],
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": [
-                        "The autoreload extension is already loaded. To reload it, use:\n",
-                        "  %reload_ext autoreload\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 288,
+            "execution_count": 2,
             "source": [
                 "import argparse\n",
                 "import collections\n",
@@ -37,55 +28,44 @@
                 "from pyro.ops.indexing import Vindex\n",
                 "\n",
                 "torch.set_default_dtype(torch.float64)  # double precision for numerical stability\n",
-                "torch.manual_seed(42)"
+                "torch.manual_seed(42)\n",
+                "\n",
+                "utterances = [\n",
+                "    \"generic is true\", \"generic is false\",\n",
+                "    \"mu\", \"some\", \"most\", \"all\",\n",
+                "]\n",
+                "\n",
+                "from vectorized_search import (\n",
+                "    VectoredSearch as VSearch,\n",
+                "    VectoredHashingMarginal as VHMarginal,\n",
+                ")\n",
+                "\n",
+                "\n",
+                "def Marginal(fn):\n",
+                "    return memoize(lambda *args: VHMarginal(VSearch(config_enumerate(fn)).run(*args)))\n",
+                "\n",
+                "\n",
+                "Params = collections.namedtuple(\"Params\", [\"theta\", \"gamma\", \"delta\"])\n",
+                "beta_bins = torch.tensor([0., 0.01, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.99])"
             ],
             "outputs": [
                 {
                     "output_type": "execute_result",
                     "data": {
                         "text/plain": [
-                            "<torch._C.Generator at 0x7f8d3c5e2e70>"
+                            "<torch._C.Generator at 0x7fd519eede70>"
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 288
+                    "execution_count": 2
                 }
             ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 307,
+            "execution_count": 5,
             "source": [
-                "from vectorized_search import VectoredSearch, VectoredHashingMarginal\n",
-                "\n",
-                "def Marginal(fn):\n",
-                "    marginal = VectoredHashingMarginal(VectoredSearch(config_enumerate(fn)))\n",
-                "    return memoize(lambda *args: marginal.run(*args)))"
-            ],
-            "outputs": [],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 290,
-            "source": [
-                "utterances = [\n",
-                "    \"generic is true\", \"generic is false\",\n",
-                "    \"mu\", \"some\", \"most\", \"all\",\n",
-                "]"
-            ],
-            "outputs": [],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 308,
-            "source": [
-                "Params = collections.namedtuple(\"Params\", [\"theta\", \"gamma\", \"delta\"])\n",
-                "\n",
-                "beta_bins = torch.tensor([0., 0.01, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.99])\n",
-                "\n",
                 "@Marginal\n",
                 "def structured_prior(params: Params) -> torch.Tensor:\n",
                 "    # computing the Beta pdf for discretized bins above for enumerated Search\n",
@@ -102,7 +82,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 309,
+            "execution_count": 6,
             "source": [
                 "wings_prior_params = Params(theta=0.5, gamma=0.99, delta=10.0)\n",
                 "wings_prior = structured_prior(wings_prior_params)\n",
@@ -134,7 +114,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 293,
+            "execution_count": 7,
             "source": [
                 "def utterance_prior() -> torch.Tensor:\n",
                 "    utts = torch.arange(0, len(utterances), 1)\n",
@@ -147,7 +127,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 294,
+            "execution_count": 8,
             "source": [
                 "def threshold_prior() -> torch.Tensor:\n",
                 "    bins = torch.arange(0.0, 1.0, 0.1)\n",
@@ -159,7 +139,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 295,
+            "execution_count": 9,
             "source": [
                 "def meaning(utterance: torch.Tensor, state: torch.Tensor, threshold: torch.Tensor) -> torch.Tensor:\n",
                 "    possible_evals = {\n",
@@ -192,7 +172,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 314,
+            "execution_count": 10,
             "source": [
                 "@Marginal\n",
                 "def listener0(utterances: torch.Tensor, thresholds: torch.Tensor, prior: HashingMarginal) -> torch.Tensor:\n",
@@ -206,7 +186,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 315,
+            "execution_count": 11,
             "source": [
                 "wings_posterior = listener0(torch.tensor([1]), torch.tensor([0.1]), wings_prior)\n",
                 "for el in wings_posterior.enumerate_support():\n",
@@ -217,72 +197,8 @@
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
-                        "tensor(0.9900) 1.0\n"
+                        "tensor(0.9000) 1.0\n"
                     ]
-                }
-            ],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 301,
-            "source": [
-                "wings_posterior.trace_dist.exec_traces[0].nodes"
-            ],
-            "outputs": [
-                {
-                    "output_type": "execute_result",
-                    "data": {
-                        "text/plain": [
-                            "OrderedDict([('_INPUT',\n",
-                            "              {'name': '_INPUT',\n",
-                            "               'type': 'args',\n",
-                            "               'args': (tensor([1]), tensor([0.1000])),\n",
-                            "               'kwargs': {}}),\n",
-                            "             ('state',\n",
-                            "              {'type': 'sample',\n",
-                            "               'name': 'state',\n",
-                            "               'fn': <vectorized_search.VectoredHashingMarginal at 0x7f8d24a94d90>,\n",
-                            "               'is_observed': False,\n",
-                            "               'args': (),\n",
-                            "               'kwargs': {},\n",
-                            "               'value': tensor([0.9000]),\n",
-                            "               'infer': {'enumerate': 'parallel', 'expand': True},\n",
-                            "               'scale': 1.0,\n",
-                            "               'mask': None,\n",
-                            "               'cond_indep_stack': (),\n",
-                            "               'done': True,\n",
-                            "               'stop': True,\n",
-                            "               'continuation': None,\n",
-                            "               'unscaled_log_prob': tensor([-3.0012]),\n",
-                            "               'log_prob': tensor([-3.0012]),\n",
-                            "               'log_prob_sum': tensor(-3.0012)}),\n",
-                            "             ('listener0-true',\n",
-                            "              {'type': 'sample',\n",
-                            "               'name': 'listener0-true',\n",
-                            "               'fn': Unit(log_factor: -99999.0),\n",
-                            "               'is_observed': True,\n",
-                            "               'args': (),\n",
-                            "               'kwargs': {},\n",
-                            "               'value': tensor([]),\n",
-                            "               'infer': {'is_auxiliary': True, '_dim_to_id': {}},\n",
-                            "               'scale': 1.0,\n",
-                            "               'mask': None,\n",
-                            "               'cond_indep_stack': (),\n",
-                            "               'done': True,\n",
-                            "               'stop': True,\n",
-                            "               'continuation': None,\n",
-                            "               'unscaled_log_prob': tensor(-99999.),\n",
-                            "               'log_prob': tensor(-99999.),\n",
-                            "               'log_prob_sum': tensor(-99999.)}),\n",
-                            "             ('_RETURN',\n",
-                            "              {'name': '_RETURN',\n",
-                            "               'type': 'return',\n",
-                            "               'value': tensor([0.9000])})])"
-                        ]
-                    },
-                    "metadata": {},
-                    "execution_count": 301
                 }
             ],
             "metadata": {}
