--- a/tutorial/source/custom_objectives.ipynb
+++ b/tutorial/source/custom_objectives.ipynb
@@ -24,9 +24,10 @@
     "    1. [A Lower Level Pattern](#A-Lower-Level-Pattern)\n",
     "2. [Example: Custom Regularizer](#Example:-Custom-Regularizer)\n",
     "3. [Example: Scaling the Loss](#Example:-Scaling-the-Loss)\n",
-    "4. [Example: Mixing Optimizers](#Example:-Mixing-Optimizers)\n",
-    "5. [Example: Custom ELBO](#Example:-Custom-ELBO)\n",
-    "6. [Example: KL Annealing](#Example:-KL-Annealing)\n"
+    "4. [Example: Beta VAE](#Example:-Beta-VAE)\n",
+    "5. [Example: Mixing Optimizers](#Example:-Mixing-Optimizers)\n",
+    "6. [Example: Custom ELBO](#Example:-Custom-ELBO)\n",
+    "7. [Example: KL Annealing](#Example:-KL-Annealing)\n"
    ]
   },
   {
@@ -130,6 +131,33 @@
     "def guide(...):\n",
     "    pass\n",
     "```\n",
+    "\n",
+    "## Example: Beta VAE\n",
+    "\n",
+    "We can also use [poutine.scale](http://docs.pyro.ai/en/dev/poutine.html#pyro.poutine.scale)\n",
+    "to construct non-standard ELBO variational objectives in which, for example, the KL divergence is scaled differently relative to the expected log likelihood. In particular for the Beta VAE the KL divergence is scaled by a factor `beta`:\n",
+    "\n",
+    "```python\n",
+    "def model(data, beta=0.5):\n",
+    "    z_loc, z_scale = ...\n",
+    "    with pyro.poutine.scale(scale=beta)\n",
+    "        z = pyro.sample(\"z\", dist.Normal(z_loc, z_scale))\n",
+    "    pyro.sample(\"obs\", dist.Bernoulli(...), obs=data)\n",
+    "   \n",
+    "def guide(data, beta=0.5):\n",
+    "    with pyro.poutine.scale(scale=beta)\n",
+    "        z_loc, z_scale = ...\n",
+    "        z = pyro.sample(\"z\", dist.Normal(z_loc, z_scale))\n",
+    "```\n",
+    "\n",
+    "With this choice of model and guide the log densities corresponding to the latent variable `z` that enter into constructing the variational objective via\n",
+    "\n",
+    "```\n",
+    "svi = pyro.infer.SVI(model, guide, optimizer, loss=pyro.infer.Trace_ELBO())\n",
+    "```\n",
+    "\n",
+    "will be scaled by a factor of `beta`, resulting in a KL divergence that is likewise scaled by `beta`.\n",
+    "\n",
     "\n",
     "## Example: Mixing Optimizers\n",
     "\n",
@@ -247,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
